2006-03-08  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (square): removed inline since it causes problems with
	some compilers

2005-11-14  Brian Gough  <bjg@network-theory.co.uk>

	* siman.c (safe_exp): added a safe_exp function to avoid underflow
	for large uphill steps
	
2003-03-31  Brian Gough  <bjg@network-theory.co.uk>

	* siman.c (gsl_siman_solve): avoid reevaluation for best_E
	(gsl_siman_solve): loop over param.iters_fixed_T not
	params.n_tries
	(gsl_siman_solve): initialise energy at start

Sat Aug  3 20:32:38 2002  Brian Gough  <bjg@network-theory.co.uk>

	* siman.c (gsl_siman_solve): fix acceptance criterion to match
	documentation (Peter S. Christopher)

Thu Jun 13 20:57:00 2002  Brian Gough  <bjg@network-theory.co.uk>

	* siman.c (gsl_siman_solve): keep track of the best result

2002-02-07  Mark Galassi  <rosalia@galassi.org>

	* siman.c (gsl_siman_solve): bug fix in the destructor for x and
	new_x which was being called on &x and &new_x instead of x and
	new_x; thanks to Karsten Howes <karsten@videotron.ca>

Thu Jul 12 21:50:07 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_siman.h: changed renamed gsl_Efunc_t to gsl_siman_Efunc_t,
	in accordance with namespace conventions

2000-12-15  Mark Galassi  <rosalia@galassi.org>

	* siman.c (gsl_siman_solve): reversed a small change I had made
	earlier and went back to taking Boltzmann-conditional steps when
	the new energy is equal to the previous one.  This allows you to
	move around if you are stuck on a plateau.

	* gsl_siman.h, siman.c, siman_test.c, siman_tsp.c, test.c: changed
	the siman_solve API to allow for more general search spaces.  The
	problem was that we assumed that points in the search space were
	data structures that were allocated in continguous memory, so they
	could not be linked structures.  I replaced the malloc(), memcpy()
	and free() calls with copy_constructor(), copyfunc() and
	copy_destructor() functions.  The user passes these functions,